clusters/fremont/lb-test/ns-lb-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: lb-test
spec: {}
status: {}
