clusters/fremont/lb-test/nginx-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: lb-test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
